recent blogs overflow corrected

--- a/style.css
+++ b/style.css
@@ -759,10 +759,12 @@ html {
   background-repeat: no-repeat;
   border-radius: 10%;
 }
-.text .title {
+.texto .title {
+  width: 100%;
   font-size: 1em;
 }
-.text .author {
+.texto .author {
+  width: 100%;
   font-size: 0.9em;
 }
 @media only screen and (max-width: 750px) {
@@ -770,13 +772,13 @@ html {
     width: 90%;
   }
   .row {
-    height: 10rem;
+    height: 8rem;
   }
-  .text .title {
-    font-size: 10px;
+  .texto .title{
+    font-size: 0.8em;
   }
-  .text .author {
-    font-size: 10px;
+  .texto .author{
+    font-size: 0.7em;
   }
 }
 /* footer styles */
